# FluidDyn

./: .gitignore  1  Makefile  conf.py  env_Flu1dDyn.sh  etude_conservative.py  etude_erreur_diffusion.py  etude_erreurs.py  index.rst  license.txt  main.py  plot_fields.py  pyproject.toml  requirements.txt  setup.cfg  sync.sh  test_and_doc.sh
doc/: Src_doc.rst  getting_stated.rst  index_nb.rst  index_test.rst  installation.rst  src.cells_interface.rst  src.main.rst  src.main_discontinu.rst  todo.rst
etudes/: 01_Calcul_T1_T2.ipynb  02_forme_equation_convection_T_continue.ipynb  03_forme_equation_convection_T_creneau.ipynb  04_diffusion.ipynb  05_diffusion-convection.ipynb  06_diffusion-convection-swarm_values.ipynb  08_diffusion-convection-swarm_values_multi_bulles-discret.ipynb  09_comparaison_diffusion_convection_numerique_convection_theorique.ipynb  10_diffusion_convection_swarm_values_discret_2.ipynb  11_diffusion_convection_swarm_values_discret_saut_dT_dt.ipynb  11_saut_dT_dt.ipynb  12_diffusion_convection_swarm_values_synthese.ipynb  12bis_diffusion_convection_swarm_values_synthese-quick.ipynb  12bis_swarm_synthese-quick.ipynb  13_couple_temperature_eneregie.ipynb  13_diffusion_convection_swarm_values_discret_saut_dT_dt_couple_eneregie.ipynb  14_diffusion_convection_swarm_values_discret_interp_Ti.ipynb  14_sautdTdt_interp_Ti.ipynb  15_SepIntT.ipynb  15_diffusion_convection_swarm_values_discret_SepIntT.ipynb  16_TOF_schema_temps.ipynb  16_diffusion_convection_swarm_values_rk3.ipynb  17_TOF_schema_convection.ipynb  18_physical_params_effects_on_energy.ipynb  (+30 more)
(+50 files in other folders)
