[metadata]
name = flu1ddyn
version = 1.0
author = CEA
author_email = aymeric.sonolet@cea.fr
description = Allows one to simulate the advection convection of a bubble in 1D.
license = CEA
url = https://github.com/cea-trust-platform/FluidDyn

[options]
packages = flu1ddyn
install_requires =
    numpy==1.19.5
    matplotlib==3.3.4
